syntax = "proto3";

package org.hypertrace.tenantpartitioning.config.service.v1;

option java_multiple_files = true;

message TenantPartitionGroupConfig{
  string id = 1;
  string group_name = 2;
  repeated string member_tenant_ids = 3;
  int32 weight = 4;
}

message NewTenantPartitionGroupConfig{
  string group_name = 1;
  repeated string member_tenant_ids = 2;
  int32 weight = 3;
}

message TenantPartitionGroupConfigForUpdate{
  repeated string member_tenant_ids = 1;
  int32 weight = 2;
}
